add history and message pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -313,14 +313,11 @@ en:
   conf_coauthors: "Co-Authors"
   home_conf_antok: "XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ (rus)"
   home_link_home: "Home"
-  home_link_conf: "About"
-  home_link_prog: "Program"
-  home_link_hotel: "Get to the conf"
-  home_link_sp: "Sponsors"
+  home_link_message: "Welcome"
+  home_link_about: "About AKSTS"
+  home_link_history: "History"
   home_link_log_out: "Log out"
   home_link_log_in: "Log in"
-  home_welcome: "Welcome to 2014 Science Conference in Yekaterinberg!"
-  home_lead: "Everyone can join the 2014 Science Conference including the members of korean scientific society of Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
   sign_up_registration: "Register"
   sign_up_info: "Step 1: Create new account"
   step1_view_btn: "Browse my account (step 1)"
