--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -374,15 +374,11 @@ ru:
     home_conf_antok: 'XVIII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
     home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
     home_link_home: "Главная"
+    home_link_message: "Приветствие"
     home_link_about: "Об АНТОК"
-    home_link_conf: "О конференции"
-    home_link_prog: "Программа"
-    home_link_hotel: "Как добраться"
-    home_link_sp: "Спонсоры"
+    home_link_history: "О конференции"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
-    home_welcome: "Добро пожаловать на научную конференцию!"
-    home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
     sign_up_info: "Шаг 1: Создание учетной записи"
     step1_view_btn: "Смотреть мой аккаунт (шаг 1)"
