--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -438,7 +438,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Для участия в конференции необходимо до 20 июня 2018 года прислать доклад на русском языке, объемом от 2 до 4 страниц, а также тезисы доклада на английском языке, объемом не более 1 страницы, краткую биографию автора и скан акта экспертизы в Оргкомитет по электронной почте AKSTSRussia@gmail.com."
+    abstracts: "Для участия в конференции необходимо прислать в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом необходимо прислать скан акта экспертизы. Все материалы направляются в Оргкомитет по электронной почте AKSTSRussia@gmail.com."
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
