--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -395,3 +395,4 @@ en:
     no_need: "No"
     need_26_27: "From 26 to 27 August"
     need_27_28: "From 27 to 28 August"
+    need_26_28: "From 26 to 28 August"
