--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -472,3 +472,4 @@ ru:
       no_need: "Не требуется"
       need_26_27: "с 26 по 27 августа"
       need_27_28: "с 27 по 28 августа"
+      need_26_28: "с 26 по 28 августа"
