--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -274,7 +274,7 @@ ru:
         applic:
           fio: "ФИО"
           fio_eng: "ФИО по-английски"
-          birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
+          birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
           sex: "Пол"
           post_address: "Почтовый адрес"
           phones: "Мобильный телефон"
