applic_files 1st version

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -327,12 +327,11 @@ en:
   step2_title: "Conference application filling out"
   step2_info: "Step 2: Conference application submitting"
   step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
-  step2_application_sent: "Your application has been sent. Thank you!" 
-  step3_apply_btn: "Submit personal application (step 3)"
-  step3_view_btn: "Browse personal application (step 3)"
-  step3_info: "Step 3: Personal application submitting"
-  step3_title: "Personal application filling out"
-  step3_application_sent: "Your personal application has been sent. Thank you!"
+  step2_application_sent: "Your application has been sent. Thank you!"
+  step3_apply_btn: "Send files (step 3)"
+  step3_view_btn: "View files (step 3)"
+  step3_title: "Sending Your Presentation"
+  step3_files_sent: "Your files has been sent"
   home_link: "Home page"
   application_updated_successfuly: "Your application has been updated"
   please_sign_in: "Please sign in"
@@ -376,7 +375,7 @@ en:
   back: "Back"
   application_id_number: "Your application number"
   questions_application: "If you have question or wish to correnct the application email to AKSTSRussia@gmail.com"
-  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com"
+  abstracts: "Abstracts for registered participants should be submitted"
   area_of_interest: "Area of Interest (multiple choise)"
   welcome_myaksts: "Welcome to personal AKSTS member page!"
   or: "or"
