--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -255,6 +255,14 @@ ru:
         short: ! '%d %b, %H:%M'
       pm: вечера
     activerecord:
+      errors:
+        models:
+          applic_file:
+            attributes:
+              file1:
+                spoofed_media_type: "не корректное расширение файла"
+              file2:
+                spoofed_media_type: "не корректное расширение файла"
       attributes:
         user:
           name: "ФИО" 
@@ -305,6 +313,11 @@ ru:
           snils: "СНИЛС (только цифры без дефисов и пробелов)"
           registration: "Адрес постоянной регистрации с индексом"
           need_hotel: "Нужна ли гостиница"
+        applic_file:
+          file1: "Доклад (doc, docx)"
+          file1_file_name: "Доклад (doc, docx)" 
+          file2: "Скан акта экспертизы (pdf, jpg, png)"
+          file2_file_name: "Скан акта экспертизы (pdf, jpg, png)" 
         kofst_applic:
           avatar: "Ваше фото"
           korean_name: "Фамилия и имя на корейском"
@@ -390,11 +403,11 @@ ru:
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
     step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
-    step3_apply_btn: "Заполнить персональную анкету (шаг 3)"
-    step3_view_btn: "Смотреть персональную анкету (шаг 3)"
-    step3_info: "Шаг 3: Заполнение персональной анкеты"
-    step3_title: "Заполнение персональной анкеты"
-    step3_application_sent: "Ваша персональная анкета заполнена. Спасибо!"
+    step3_apply_btn: "Отправить доклад и заявление (шаг 3)"
+    step3_view_btn: "Смотреть отправленный доклад (шаг 3)"
+    step3_title: "Отправка доклада и заявления"
+    step3_files_sent: "Материалы докладов отправлены"
+    step3_updated_successfuly: "Материалы докладов обновлены"
     home_link: "На главную"
     application_updated_successfuly: "Ваша заявка успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
@@ -438,7 +451,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Для участия в конференции необходимо прислать в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом необходимо прислать скан акта экспертизы. Все материалы направляются в Оргкомитет по электронной почте AKSTSRussia@gmail.com."
+    abstracts: "Для участия в конференции необходимо прислать в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом необходимо прислать скан акта экспертизы."
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
