send docs and akt

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -404,7 +404,7 @@ ru:
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
     step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
     step3_apply_btn: "Отправить доклад и заявление (шаг 3)"
-    step3_view_btn: "Смотреть отправленный доклад (шаг 3)"
+    step3_view_btn: "Смотреть отправленные файлы (шаг 3)"
     step3_title: "Отправка доклада и заявления"
     step3_files_sent: "Материалы докладов отправлены"
     step3_updated_successfuly: "Материалы докладов обновлены"
