--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -402,11 +402,11 @@ ru:
     step2_info: "Шаг 2: Заполнение заявки на конференцию. Поля со * обязательны к заполнению"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
-    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
+    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо! Остался последний шаг - Отправить доклад!"
     step3_apply_btn: "Отправить доклад и заявление (шаг 3)"
     step3_view_btn: "Смотреть отправленные файлы (шаг 3)"
     step3_title: "Отправка доклада и заявления"
-    step3_files_sent: "Материалы докладов отправлены"
+    step3_files_sent: "Ваш доклад отправлен! До встречи на конференции!"
     step3_updated_successfuly: "Материалы докладов обновлены"
     home_link: "На главную"
     application_updated_successfuly: "Ваша заявка успешна сохранена"
