--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -299,13 +299,13 @@ ru:
           work_city: "Город"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
-          work_position: "Должность"
+          work_position: "Должность / Курс обучения"
           work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
           antok_city: "Ближайшее региональное отделение АНТОК"
           public_organizations: "Участие в других общественных организациях"
           science_interests: "Область научных/профессиональных интересов"
           conf_topic: "Тема доклада"
-          conf_section: "Направление"
+          conf_section: "Направление работы конференции"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
           need_compensation: "Нужна компенсация транспортных расходов?"
@@ -369,11 +369,12 @@ ru:
     you_already_have_application: "У вас уже есть заявка на конференцию"
     application_registered: "Зарегистрирована заявка на XVIII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     anketa: "Анкета участника конференции"
+    participance_info: "Информация об участии"
     personal_info: "Персональная информация"
     education: "Образование"
-    work: "Работа"
+    work: "Место работы / учебы"
     additional_info: "Дополнительная информация"
-    applicaion_info: "Заявка на конференцию"
+    applicaion_info: "Специализация и доклад"
     compensation_info: "Информация о компенсации расходов"
     yes1: "Да"
     no1: "Нет"
@@ -402,7 +403,7 @@ ru:
     step2_info: "Шаг 2: Заполнение заявки на конференцию. Поля со * обязательны к заполнению"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
-    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо! Остался последний шаг - Отправить доклад!"
+    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо! Если вы участник с докладом, то отправьте доклад."
     step3_apply_btn: "Отправить доклад и заявление (шаг 3)"
     step3_view_btn: "Смотреть отправленные файлы (шаг 3)"
     step3_title: "Отправка доклада и заявления"
@@ -435,6 +436,7 @@ ru:
     social_sciences: "Общественные науки"
     aviation_space: "Авиационные и космические технологии"
     participance: "Очное"
+    participance_no_report: "Очное без доклада"
     publications_only: "Заочное"
     sign_in: "Вход"
     sign_up: "Регистрация"
@@ -451,7 +453,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Для участия в конференции необходимо прислать в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом необходимо прислать скан акта экспертизы."
+    abstracts: "Для участия в конференции с докладом необходимо отправить в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом прислать скан акта экспертизы. Отправка документов производится через сайт конференции."
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
@@ -474,7 +476,8 @@ ru:
     st_magister: "Магистр"
     st_special: "Специалист"
     st_bachelor: "Бакалавр"
-    st_student: "Студент"
+    st_student_bachelor: "Студент бакалавриата"
+    st_student_magister: "Студент магистратуры"
     find_antokid: "Найти АНТОК ID"
     your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2017.aksts.ru - "
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
