some program updates not finished

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -388,6 +388,7 @@ ru:
     home_conf_antok: 'XVIII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
     home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
     home_link_home: "Главная"
+    home_link_program: "Программа"
     home_link_message: "Приветствие"
     home_link_about: "Об АНТОК"
     home_link_history: "О конференции"
