--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -392,6 +392,7 @@ ru:
     home_link_message: "Приветствие"
     home_link_about: "Об АНТОК"
     home_link_history: "О конференции"
+    home_link_hotel: "Как добраться"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
