--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -316,6 +316,7 @@ en:
   home_link_message: "Welcome"
   home_link_about: "About AKSTS"
   home_link_history: "History"
+  home_link_hotel: "Hotel"
   home_link_log_out: "Log out"
   home_link_log_in: "Log in"
   sign_up_registration: "Register"
