--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -385,7 +385,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: 'XVIII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
+    home_conf_antok: 'XIX МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
     home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
     home_link_home: "Главная"
     home_link_program: "Программа"
