--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -406,10 +406,11 @@ ru:
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
     step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо! Если вы участник с докладом, то отправьте доклад."
-    step3_apply_btn: "Отправить доклад и заявление (шаг 3)"
+    step3_apply_btn: "Отправить доклад и акт экспертизы (шаг 3)"
+    step3_apply_btn_long: "Отправить доклад и скан акта экспертизы (заявления)"
     step3_view_btn: "Смотреть отправленные файлы (шаг 3)"
     step3_title: "Отправка доклада и заявления"
-    step3_files_sent: "Ваш доклад отправлен! До встречи на конференции!"
+    step3_files_sent: "Ваш доклад отправлен!"
     step3_updated_successfuly: "Материалы докладов обновлены"
     home_link: "На главную"
     application_updated_successfuly: "Ваша заявка успешна сохранена"
@@ -481,13 +482,13 @@ ru:
     st_student_bachelor: "Студент бакалавриата"
     st_student_magister: "Студент магистратуры"
     find_antokid: "Найти АНТОК ID"
-    your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2018.aksts.ru - "
+    your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2019.aksts.ru - "
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
     home_conf_description_temp: 'Регистрация скоро откроется!'
     russia: "Россия"
     saved_successfuly: "Успешно сохранено"
     need_hotel_collection:
       no_need: "Не требуется"
-      need_26_27: "с 26 по 27 августа"
-      need_27_28: "с 27 по 28 августа"
-      need_26_28: "с 26 по 28 августа"
+      need_29_30: "с 29 по 30 августа"
+      need_30_31: "с 30 по 31 августа"
+      need_29_31: "с 29 по 31 августа"
