--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -367,7 +367,7 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
-    application_registered: "Зарегистрирована заявка на XVIII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    application_registered: "Зарегистрирована заявка на XIX МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     anketa: "Анкета участника конференции"
     participance_info: "Информация об участии"
     personal_info: "Персональная информация"
