doc(*): informational letter 2

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -386,7 +386,7 @@ ru:
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
     home_conf_antok: 'XIX МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
-    home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
+    home_conf_moto: "Enabling people with science and technology!"
     home_link_home: "Главная"
     home_link_program: "Программа"
     home_link_message: "Приветствие"
