--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -395,6 +395,7 @@ ru:
     home_link_hotel: "Как добраться"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
+    home_link_certificates: "Сертификаты"
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
     sign_up_info: "Шаг 1: Создание учетной записи"
     step1_view_btn: "Смотреть мой аккаунт (шаг 1)"
