--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -385,8 +385,8 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: 'XX МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ "Россия-Корея-СНГ"'
-    home_conf_moto: "Enabling people with science and technology!"
+    home_conf_antok: 'XХ Юбилейная Международной конференции по науке и технологиям РОССИЯ-КОРЕЯ-СНГ'
+    home_conf_moto: "Think! Imagine! Create!"
     home_link_home: "Главная"
     home_link_program: "Программа"
     home_link_message: "Приветствие"
