--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -283,6 +283,7 @@ ru:
           fio: "ФИО"
           fio_eng: "ФИО по-английски"
           birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
+          birth_year: "Год рождения"
           sex: "Пол"
           post_address: "Почтовый адрес"
           phones: "Мобильный телефон"
@@ -439,7 +440,7 @@ ru:
     geology_natural_resources: "Геология, природные ресурсы"
     social_sciences: "Общественные науки"
     aviation_space: "Авиационные и космические технологии"
-    participance: "Очное"
+    participance: "Очное (онлайн)"
     participance_no_report: "Очное без доклада"
     publications_only: "Заочное"
     sign_in: "Вход"
