--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -386,7 +386,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: 'XХ Юбилейная Международной конференции по науке и технологиям РОССИЯ-КОРЕЯ-СНГ'
+    home_conf_antok: 'XХ Юбилейная Международная конференция по науке и технологиям РОССИЯ-КОРЕЯ-СНГ'
     home_conf_moto: "Think! Imagine! Create!"
     home_link_home: "Главная"
     home_link_program: "Программа"
