--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -368,7 +368,7 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
-    application_registered: "Зарегистрирована заявка на XX МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    application_registered: "Зарегистрирована заявка на XXI МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     anketa: "Анкета участника конференции"
     participance_info: "Информация об участии"
     personal_info: "Персональная информация"
@@ -386,8 +386,8 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: 'XХ Юбилейная Международная конференция по науке и технологиям РОССИЯ-КОРЕЯ-СНГ'
-    home_conf_moto: "Think! Imagine! Create!"
+    home_conf_antok: 'XХI МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ'
+    home_conf_moto: "Thirty years of Networking in Science!"
     home_link_home: "Главная"
     home_link_program: "Программа"
     home_link_message: "Приветствие"
@@ -484,7 +484,7 @@ ru:
     st_student_bachelor: "Студент бакалавриата"
     st_student_magister: "Студент магистратуры"
     find_antokid: "Найти АНТОК ID"
-    your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2020.aksts.ru - "
+    your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2021.aksts.ru - "
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
     home_conf_description_temp: 'Регистрация скоро откроется!'
     russia: "Россия"
