update participance types list

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -440,7 +440,8 @@ ru:
     geology_natural_resources: "Геология, природные ресурсы"
     social_sciences: "Общественные науки"
     aviation_space: "Авиационные и космические технологии"
-    participance: "Очное (онлайн)"
+    participance: "Очное"
+    participance_online: "Онлайн"
     participance_no_report: "Очное без доклада"
     publications_only: "Заочное"
     sign_in: "Вход"
