update inform letter, list of sections and abstracts text

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -459,7 +459,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Для участия в конференции с докладом необходимо отправить в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом от ½ до 1 страницы, краткую биографию автора на русском и английском языках. Кроме того, отдельным файлом прислать скан акта экспертизы. Отправка документов производится через сайт конференции."
+    abstracts: "Для участия в конференции с докладом необходимо до 31 июля 2021 г. пройти регистрацию на сайте Конференции https://conf2021.aksts.ru и прислать в одном файле MS Word, версии не ниже 2010, следующие документы: доклад на русском языке, объемом от 2 до 4 страниц, тезисы доклада на английском языке, объемом 1 полная страница, краткую биографию автора на русском языке. Кроме того, отдельным файлом, желательно в формате PDF, необходимо прислать скан акта экспертизы или заявление по установленной форме. Все материалы размещаются на сайте конференции в личном кабинете заявителя. Рекомендуется дублировать материалы по электронной почте AKSTSRussia@gmail.com."
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
