--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -281,7 +281,7 @@ ru:
           birth_year: "Год рождения"
         applic:
           fio: "ФИО"
-          fio_eng: "ФИО по-английски"
+          fio_eng: "Фамилия и имя по-английски"
           birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
           birth_year: "Год рождения"
           sex: "Пол"
@@ -300,9 +300,9 @@ ru:
           work_city: "Город"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
-          work_position: "Должность / Курс обучения"
+          work_position: "Должность / Курс обучения / класс школы"
           work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
-          antok_city: "Ближайшее региональное отделение АНТОК"
+          antok_city: "Выберите ближайший регион"
           public_organizations: "Участие в других общественных организациях"
           science_interests: "Область научных/профессиональных интересов"
           conf_topic: "Тема доклада"
@@ -311,7 +311,7 @@ ru:
           participation_type: "Тип участия"
           need_compensation: "Нужна компенсация транспортных расходов?"
           inn: "ИНН"
-          snils: "СНИЛС (только цифры без дефисов и пробелов)"
+          snils: "Размер футболки"
           registration: "Адрес постоянной регистрации с индексом"
           need_hotel: "Нужна ли гостиница"
         applic_file:
@@ -432,6 +432,8 @@ ru:
     kaliningrad: "Калининград"
     uz_sakhalinsk: "Южно-Сахалинск"
     vladivostok: "Владивосток"
+    khabarovsk: "Хабаровск"
+    primor_sakhalin: "Приморский край и Сахалин"
     physics_maths: "Физика, математика"
     it_nanothechnologies: "Информационные (IT) и нанотехнологии"
     power_electrical_engineering: "Энергетика, электротехника, машиностроение, механика"
@@ -492,6 +494,6 @@ ru:
     saved_successfuly: "Успешно сохранено"
     need_hotel_collection:
       no_need: "Не требуется"
+      need_25_26: "с 25 по 26 августа"
       need_26_27: "с 26 по 27 августа"
-      need_27_28: "с 27 по 28 августа"
-      need_26_28: "с 26 по 28 августа"
+      need_25_27: "с 25 по 27 августа"
