disable email notifications

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -407,7 +407,7 @@ ru:
     step2_info: "Шаг 2: Заполнение заявки на конференцию. Поля со * обязательны к заполнению"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
-    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо! Если вы участник с докладом, то отправьте доклад."
+    step2_application_sent: "Все хорошо, ваша заявка на конференцию отправлена. Если вы участник с докладом, то отправьте, пожалуйста, доклад. ВНИМАНИЕ: уведомлений о подаче заявки на ваш емайл с этого года мы не отправляем!"
     step3_apply_btn: "Отправить доклад и акт экспертизы (шаг 3)"
     step3_apply_btn_long: "Отправить доклад и скан акта экспертизы (заявления)"
     step3_view_btn: "Смотреть отправленные файлы (шаг 3)"
