enable email deliveries

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -281,7 +281,7 @@ ru:
           birth_year: "Год рождения"
         applic:
           fio: "ФИО"
-          fio_eng: "Фамилия и имя по-английски"
+          fio_eng: "Фамилия и имя на английском"
           birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
           birth_year: "Год рождения"
           sex: "Пол"
@@ -300,7 +300,7 @@ ru:
           work_city: "Город"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
-          work_position: "Должность / Курс обучения / класс школы"
+          work_position: "Должность / курс обучения / класс школы"
           work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
           antok_city: "Выберите ближайший регион"
           public_organizations: "Участие в других общественных организациях"
